--- a/index.htm
+++ b/index.htm
@@ -36,3 +36,6 @@
 
   </body>
 </html>
+
+<!-- if you know me irl then do dis http://kevan.org/johari?name=nicolaika -->
+<!-- also dis http://kevan.org/nohari?name=nicolaika -->
