cleans some css

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>NAM</title>
+    <title>Nicole A Montano</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
 
     <script>
@@ -21,7 +21,7 @@
       Nicole A Montano
     </nav>
 
-    <section id="exit">
+    <div id="exit">
       <ul>
         <li class="linkedin"><a href="http://www.linkedin.com/pub/nicole-montano/51/b91/998" target="_blank"><img src='./images/linkedin-128.png' alt="linkedin" /></a></li>
         <li class="github"><a href="http://github.com/nicolemon" target="_blank"><img src='./images/github-128.png' alt="github" /></a></li>
@@ -29,9 +29,12 @@
         <li class="goodreads"><a href="http://www.goodreads.com/user/show/4608396-nicole" target="_blank"><img src='./images/goodreads-128.png' alt="goodreads" /></a></li>
         <li class="twitter"><a href="http://www.twitter.com/nicolysis" target="_blank"><img src='./images/twitter-128.png' alt="twitter" /></a></li>
       </ul>
-    </section>
+    </div>
 
-    <aside><a href="http://simpleicons.org" target="_blank">icons</a></aside>
+    <div id="aside">
+      <a href="http://simpleicons.org" target="_blank">icons from simpleicons.org</a>
+    </div>
+
     <footer>&nbsp;</footer>
 
   </body>
