moves icons further down the page
in a hacky attempt to vertically center

--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
     <nav>
       Nicole A Montano
     </nav>
-
+    <div id="content">
     <div id="exit">
       <ul>
         <li class="linkedin"><a href="http://www.linkedin.com/pub/nicole-montano/51/b91/998" target="_blank"><img src='./images/linkedin-128.png' alt="linkedin" /></a></li>
@@ -33,6 +33,7 @@
 
     <div id="aside">
       <a href="http://simpleicons.org" target="_blank">icons from simpleicons.org</a>
+    </div>
     </div>
 
     <footer>&nbsp;</footer>
