--- a/index.htm
+++ b/index.htm
@@ -20,20 +20,25 @@
     <nav>
       Nicole A Montano
     </nav>
-    <div id="content">
-    <div id="exit">
-      <ul>
-        <li class="linkedin"><a href="http://www.linkedin.com/pub/nicole-montano/51/b91/998" target="_blank"><img src='./images/linkedin-128.png' alt="linkedin" /></a></li>
-        <li class="github"><a href="http://github.com/nicolemon" target="_blank"><img src='./images/github-128.png' alt="github" /></a></li>
-        <li class="lastfm"><a href="http://last.fm/user/nicolysis" target="_blank"><img src='./images/lastfm-128.png' alt="last.fm" /></a></li>
-        <li class="goodreads"><a href="http://www.goodreads.com/user/show/4608396-nicole" target="_blank"><img src='./images/goodreads-128.png' alt="goodreads" /></a></li>
-        <li class="twitter"><a href="http://www.twitter.com/nicolysis" target="_blank"><img src='./images/twitter-128.png' alt="twitter" /></a></li>
-      </ul>
-    </div>
+    <div id="container">
 
-    <div id="aside">
-      <a href="http://simpleicons.org" target="_blank">icons from simpleicons.org</a>
-    </div>
+      <div id="exit">
+        <ul>
+          <li class="linkedin"><a href="http://www.linkedin.com/pub/nicole-montano/51/b91/998" target="_blank"><img src='./images/linkedin-128.png' alt="linkedin" /></a></li>
+          <li class="github"><a href="http://github.com/nicolemon" target="_blank"><img src='./images/github-128.png' alt="github" /></a></li>
+          <li class="lastfm"><a href="http://last.fm/user/nicolysis" target="_blank"><img src='./images/lastfm-128.png' alt="last.fm" /></a></li>
+          <li class="goodreads"><a href="http://www.goodreads.com/user/show/4608396-nicole" target="_blank"><img src='./images/goodreads-128.png' alt="goodreads" /></a></li>
+          <li class="twitter"><a href="http://www.twitter.com/nicolysis" target="_blank"><img src='./images/twitter-128.png' alt="twitter" /></a></li>
+        </ul>
+      </div>
+
+      <div id="content">
+      </div>
+
+      <div id="aside">
+        <a href="http://simpleicons.org" target="_blank">icons from simpleicons.org</a>
+      </div>
+
     </div>
 
     <footer>&nbsp;</footer>
